--- a/app/src/main/res/layout/watermark_view.xml
+++ b/app/src/main/res/layout/watermark_view.xml
@@ -8,105 +8,141 @@
     android:orientation="vertical">
 
 
+
     <FrameLayout
-        android:layout_width="650dp"
-        android:layout_height="match_parent">
-
-        <org.opencv.android.JavaCameraView
-            android:id="@+id/activity_surface_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <FrameLayout
             android:layout_width="650dp"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            >
+            <org.opencv.android.JavaCameraView
+                android:id="@+id/activity_surface_view"
+                android:layout_width="650dp"
+                android:layout_height="match_parent" />
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="left|top"
+            android:background="@color/white">
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/bluetooth"
+                android:src="@drawable/bluetooth"/>
+        </FrameLayout>
+
+
+        <FrameLayout
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right|bottom"
+            android:background="@color/white"
+            >
+            <ScrollView
+                android:orientation="vertical"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:background="#ffffff" >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:paddingRight="10px"
+                    >
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:id="@+id/stand"
+                        android:layout_marginTop="20dp"
+                        android:layout_gravity="center_vertical"
+                        android:text="        Stand"/>
+                    <ImageButton
+                        android:id="@+id/imageButton1"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:src="@drawable/mark2"
+                        android:background="@android:color/transparent"
+                        android:scaleType="fitCenter"/>
+
+                    <ImageButton
+                        android:id="@+id/imageButton2"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:src="@drawable/mark3b"
+                        android:background="@android:color/transparent"
+                        android:scaleType="centerCrop"/>
+                    <ImageButton
+                        android:id="@+id/imageButton6"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:src="@drawable/mark7b"
+                        android:background="@android:color/transparent"
+                        android:scaleType="centerCrop"/>
+                    <ImageButton
+                        android:id="@+id/imageButton3"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:src="@drawable/mark4b"
+                        android:background="@android:color/transparent"
+                        android:scaleType="centerCrop"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:id="@+id/sit"
+                        android:layout_marginTop="20dp"
+                        android:layout_gravity="center_vertical"
+                        android:text="          Sit"/>
+
+                    <ImageButton
+                        android:id="@+id/imageButton4"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:src="@drawable/mark5b"
+                        android:background="@android:color/transparent"
+                        android:scaleType="centerCrop"/>
+                    <ImageButton
+                        android:id="@+id/imageButton5"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:src="@drawable/mark6b"
+                        android:background="@android:color/transparent"
+                        android:scaleType="centerCrop"/>
+                    //버튼수정
+                    <ImageButton
+                        android:id="@+id/back"
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="10dp"
+                        android:padding="4dp"
+                        android:layout_gravity="center"
+                        android:scaleType="fitCenter"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/back"
+                        android:text="Back" />
+                </LinearLayout>
+
+            </ScrollView>
+        </FrameLayout>
+
+
     </FrameLayout>
 
-    <ScrollView
-        android:orientation="vertical"
-        android:layout_width="90dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:background="#ffffff" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingRight="10px"
-            >
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:id="@+id/stand"
-                android:layout_marginTop="20dp"
-                android:layout_gravity="center_vertical"
-                android:text="        Stand"/>
-
-            <ImageButton
-                android:id="@+id/imageButton1"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:src="@drawable/mark2"
-                android:background="@android:color/transparent"
-                android:scaleType="fitCenter"/>
-
-            <ImageButton
-                android:id="@+id/imageButton2"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:src="@drawable/mark3b"
-                android:background="@android:color/transparent"
-                android:scaleType="centerCrop"/>
-            <ImageButton
-                android:id="@+id/imageButton6"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:src="@drawable/mark7b"
-                android:background="@android:color/transparent"
-                android:scaleType="centerCrop"/>
-            <ImageButton
-                android:id="@+id/imageButton3"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:src="@drawable/mark4b"
-                android:background="@android:color/transparent"
-                android:scaleType="centerCrop"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:id="@+id/sit"
-                android:layout_marginTop="20dp"
-                android:layout_gravity="center_vertical"
-                android:text="          Sit"/>
-
-            <ImageButton
-                android:id="@+id/imageButton4"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:src="@drawable/mark5b"
-                android:background="@android:color/transparent"
-                android:scaleType="centerCrop"/>
-            <ImageButton
-                android:id="@+id/imageButton5"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:src="@drawable/mark6b"
-                android:background="@android:color/transparent"
-                android:scaleType="centerCrop"/>
-
-            <Button
-                android:id="@+id/back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Back" />
-        </LinearLayout>
-
-    </ScrollView>
 
 
 </RelativeLayout>
