--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,20 @@
                 android:src="@drawable/bluetooth"
 
                 android:text="bluetooth"/>
+
+            <ImageButton
+                android:id="@+id/info"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_above="@+id/button"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="320dp"
+                android:layout_marginLeft="7dp"
+                android:background="@android:color/transparent"
+                android:scaleType="fitCenter"
+                android:src="@drawable/info"
+
+                android:text="bluetooth"/>
         </FrameLayout>
 
 
